--- a/labs/lab3/README
+++ b/labs/lab3/README
@@ -9,11 +9,11 @@
 | O3       | 0.00 ms | 0.00 ms | 0.00 ms | 0.01 ms   | 0.01 ms   | 0.00 ms   |
 | Ofast    | 0.00 ms | 0.00 ms | 0.00 ms | 0.01 ms   | 0.01 ms   | 0.00 ms   |
 
-## 2. Time Comparison For FIR Filter on PYNQ vs Jetson (o0)
+## 2 & 3. Time Comparison For FIR Filter on PYNQ vs Jetson (o0)
 | Time     | Pynq    | Pynq pg | Jetson    | Jetson pg |
 | -------- | ------- | ------- | --------- | --------- |
-| real     | 0.00  s | 0.00  s | 0.266 s   | 0.263 s   |
-| usr      | 0.00  s | 0.00  s | 0.252 s   | 0.252 s   |
-| sys      | 0.00  s | 0.00  s | 0.120 s   | 0.008 s   |
+| real     | 1.732 s | 1.729 s | 0.266 s   | 0.263 s   |
+| usr      | 1.690 s | 1.708 s | 0.252 s   | 0.252 s   |
+| sys      | 0.040 s | 0.020 s | 0.120 s   | 0.008 s   |
 
-## 3. Platform Comparison 
+Compiling with and without the -pq flag made a slight difference in the execution time, but not a significant one. What made a bigger differnce was which cpu the program was run on. As seen in the above table the processor on the PYNQ board is quite a bit slower than the one on the Jetson TX2. 
